<resources>
    <string name="app_name">Budget Tracker</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot">Forgot?</string>
    <string name="dont_have_account">Don\'t have account? Create now</string>
    <string name="create_account">Create account</string>
    <string name="recovery_code">Account Recovery Code</string>
    <string name="ok">OK</string>
    <string name="recovery_code_dialog_msg">The recovery code for your account is %s. This code is required in case you forgot you password. So, we highly recommend you to remember it.</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="validate">Validate</string>
    <string name="incorrect_username_code">Incorrect username or recovery code!!</string>
    <string name="password_confirm_not_same">Password and confirm password are not same!!</string>
    <string name="reset_successful">Password reset successful</string>
    <string name="signup_successful">Account created successfully</string>
    <string name="password_not_empty">Password cannot be left empty!</string>
    <string name="username_not_empty">Username cannot be left empty!</string>
    <string name="expenses_list">List of Expenses</string>
    <string name="total_amt_spent">Total Amount Spent: %s</string>
    <string name="budget">Your Budget: %s</string>
    <string name="budget2">Your Budget</string>
    <string name="expenses">Expenses</string>
    <string name="cost">Cost</string>
    <string name="add_expense">Add New Expense</string>
    <string name="login_successful">Log in successful!</string>
    <string name="incorrect_credentials">Incorrect Credentials!!</string>
    <string name="login_fail">Log in failed!!</string>
    <string name="username_taken">Username is already taken! Use a different name.</string>
    <string name="check_username_availability">Check Username Availability</string>
    <string name="enter_expense_details">Enter details of the expense:</string>
    <string name="item_name">Item Name</string>
    <string name="save">SAVE</string>
    <string name="edit_budget">Edit your budget</string>
    <string name="budget_edit_successful">Budget edited successfully!</string>
    <string name="enter_budget">Please enter a budget!</string>
    <string name="enter_all_details">Please enter all the details!</string>
    <string name="warning">⚠ You have exceeded your budget by: %s!</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="edit_details">Edit Expense Details</string>
    <string name="edit_details_successful">Details edited successfully</string>
    <string name="delete">Delete this expense</string>
    <string name="delete_details_successful">Expense deleted successfully</string>
    <string name="delete_warning">Warning!</string>
    <string name="delete_warning_message">Do you want to permanently delete this record?</string>
    <string name="delete_all_warning_message">Do you want to permanently delete all the records?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_all">Delete all records</string>
    <string name="delete_all_successful">All records deleted successfully</string>
    <string name="expense_add_successful">Record added successfully</string>
    <string name="expense_details">Details of the Expense</string>

</resources>