<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.budgettracker.LoginFragment"
        android:label="@string/log_in"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_signupFragment"
            app:destination="@id/signupFragment" />
        <action
            android:id="@+id/action_loginFragment_to_forgotPasswordFragment"
            app:destination="@id/forgotPasswordFragment" />
        <action
            android:id="@+id/action_loginFragment_to_expensesListFragment"
            app:destination="@id/expensesListFragment" />
    </fragment>
    <fragment
        android:id="@+id/signupFragment"
        android:name="com.example.budgettracker.SignupFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_signup" >
        <action
            android:id="@+id/action_signupFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/forgotPasswordFragment"
        android:name="com.example.budgettracker.ForgotPasswordFragment"
        android:label="@string/reset_password"
        tools:layout="@layout/fragment_forgot_password" >
        <action
            android:id="@+id/action_forgotPasswordFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/expensesListFragment"
        android:name="com.example.budgettracker.ExpensesListFragment"
        android:label="@string/expenses_list"
        tools:layout="@layout/fragment_expenses_list" >
        <argument
            android:name="id"
            app:argType="integer" />
        <action
            android:id="@+id/action_expensesListFragment_to_addExpenseFragment"
            app:destination="@id/addExpenseFragment" />
        <action
            android:id="@+id/action_expensesListFragment_to_expenseDetailFragment"
            app:destination="@id/expenseDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/addExpenseFragment"
        android:name="com.example.budgettracker.AddExpenseFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_add_expense" >
        <argument
            android:name="userId"
            app:argType="integer" />
        <argument
            android:name="title"
            app:argType="string" />
        <action
            android:id="@+id/action_addExpenseFragment_to_expensesListFragment"
            app:destination="@id/expensesListFragment"
            app:popUpTo="@id/expensesListFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="userExpenseId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/expenseDetailFragment"
        android:name="com.example.budgettracker.ExpenseDetailFragment"
        android:label="@string/expense_details" >
        <action
            android:id="@+id/action_expenseDetailFragment_to_addExpenseFragment"
            app:destination="@id/addExpenseFragment" />
        <argument
            android:name="userExpenseId"
            app:argType="integer" />
        <argument
            android:name="userId"
            app:argType="integer" />
        <action
            android:id="@+id/action_expenseDetailFragment_to_expensesListFragment"
            app:destination="@id/expensesListFragment"
            app:popUpTo="@id/expensesListFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>