<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fragment"
            type="com.example.budgettracker.ForgotPasswordFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ForgotPasswordFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/rectangle"
                android:layout_width="match_parent"
                android:layout_height="340dp"
                android:background="@drawable/pentagon"
                app:layout_constraintEnd_toEndOf="@id/rectangle_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/rectangle_2"
                android:layout_width="match_parent"
                android:layout_height="550dp"
                android:layout_marginTop="255dp"
                android:background="@drawable/rectangle_2"
                android:backgroundTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/icon"
                android:layout_width="100dp"
                android:layout_height="56dp"
                android:layout_marginTop="52dp"
                android:layout_marginStart="75dp"
                android:src="@drawable/wallet"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="contentDescription"/>

            <TextView
                android:id="@+id/icon_heading"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/app_name"
                android:textAppearance="@style/app_heading"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.128"
                app:layout_constraintStart_toEndOf="@id/icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/signup"
                android:layout_width="276dp"
                android:layout_height="45dp"
                android:layout_marginTop="275dp"
                android:text="@string/reset_password"
                android:textAppearance="@style/login"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_text_layout"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/username"
                android:minHeight="48dp"
                android:paddingHorizontal="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signup"
                tools:ignore="TextContrastCheck">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textStyle="bold"
                    tools:text="Lorem Ipsum" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/recovery_code_text_layout"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/recovery_code"
                android:minHeight="48dp"
                android:paddingHorizontal="15dp"
                app:passwordToggleEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username_text_layout"
                tools:ignore="TextContrastCheck">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/recovery_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberPassword"
                    android:textStyle="bold"
                    tools:text="122334" />

            </com.google.android.material.textfield.TextInputLayout>

            <android.widget.Button
                android:id="@+id/validate_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="23dp"
                android:layout_marginTop="30dp"
                android:text="@string/validate"
                android:textStyle="bold"
                android:textAppearance="@style/log_in"
                android:backgroundTint="@color/blue"
                android:onClick="@{() -> fragment.onValidateButtonClick()}"
                app:layout_constraintTop_toBottomOf="@id/recovery_code_text_layout"
                tools:visibility="invisible" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_password_text_layout"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/new_password"
                android:minHeight="48dp"
                android:paddingHorizontal="15dp"
                app:passwordToggleEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recovery_code_text_layout"
                tools:ignore="TextContrastCheck">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:inputType="textPassword"
                    tools:text="qwert122334" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password_text_layout"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/confirm_password"
                android:minHeight="48dp"
                android:paddingHorizontal="15dp"
                app:passwordToggleEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/new_password_text_layout"
                tools:ignore="TextContrastCheck">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:inputType="textPassword"
                    tools:text="qwert122334" />
            </com.google.android.material.textfield.TextInputLayout>

            <android.widget.Button
                android:id="@+id/reset_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="23dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/blue"
                android:onClick="@{() -> fragment.onResetButtonClick()}"
                android:text="@string/reset"
                android:textAppearance="@style/log_in"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confirm_password_text_layout"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>