<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ExpenseDetailFragment">

        <View
            android:id="@+id/rectangle"
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:background="@drawable/pentagon"
            app:layout_constraintEnd_toEndOf="@id/rectangle_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/rectangle_2"
            android:layout_width="match_parent"
            android:layout_height="950dp"
            android:layout_marginTop="85dp"
            android:background="@drawable/rectangle_2"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintTop_toTopOf="@id/rectangle_2"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Name"/>

        <TextView
            android:id="@+id/currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="18dp"
            android:textAppearance="@style/add_expense"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemName"
            tools:text="$" />

        <TextView
            android:id="@+id/cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/add_expense"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintTop_toTopOf="@id/currency"
            app:layout_constraintBottom_toBottomOf="@id/currency"
            app:layout_constraintStart_toEndOf="@id/currency"
            tools:text="100" />

        <View
            android:id="@+id/divider_cost"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/dividerHorizontal"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/currency"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/ic_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_calendar_24"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/divider_cost"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/date" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/add_expense"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintTop_toTopOf="@+id/ic_calendar"
            app:layout_constraintBottom_toBottomOf="@id/ic_calendar"
            app:layout_constraintStart_toEndOf="@id/ic_calendar"
            tools:text="22-12-2022" />

        <View
            android:id="@+id/divider_date"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/dividerHorizontal"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/ic_calendar"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/ic_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_time_24"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/divider_date"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/time" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:textAppearance="@style/add_expense"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintStart_toEndOf="@id/ic_time"
            app:layout_constraintTop_toTopOf="@+id/ic_time"
            app:layout_constraintBottom_toBottomOf="@+id/ic_time"
            tools:text="6:00" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_expense_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:contentDescription="@string/delete"
            android:src="@drawable/delete"
            app:layout_constraintBottom_toTopOf="@id/edit_expense_fab"
            app:layout_constraintStart_toStartOf="@id/edit_expense_fab"
            app:layout_constraintEnd_toEndOf="@id/edit_expense_fab"
            app:tint="@android:color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_expense_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:contentDescription="@string/add_expense"
            android:src="@drawable/edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@android:color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>